the mess begins

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>🕊️ Sacred Timeline Viewer</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="icon" href="public/favicon.ico" type="image/x-icon" />
-  <meta name="description" content="An interactive, artistic journey through sacred history from 3000 BC to today. Explore events, people, and divine moments." />
+  <meta name="description" content="An interactive, artistic journey through sacred history from 5000 BC to today. Explore events, people, and divine moments." />
 </head>
 <body>
 
@@ -54,6 +54,7 @@
 
   <!-- Scripts -->
   <script src="scripts/injectPartials.js" defer></script>
+  <script src="scripts/dating.js" defer></script>
   <script src="scripts/timeline-ticks.js" defer></script>
   <script src="scripts/positionEntries.js" defer></script>
   <script src="scripts/zoomHandler.js" defer></script>
