update the home page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="woc-card">
       <h2>Cruciform Timeline</h2>
       <p>History re-imagined as a sacred story — cosmic, personal, and divine.</p>
-      <a href="/timeline.html/">View Timeline →</a>
+      <a href="/timeline.html">View Timeline →</a>
     </div>
     <div class="woc-card">
       <h2>Substack Letters</h2>
